# pyHMCodejl

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: benchmark_speed_vs_nz.py  check_nM.py  check_threaded.py  compare_recipes.py  compare_with_camb_hmcode.py  profile_wrapper.py  sweep_nm_camb_comparison_and_bench.py
src/hmcode_py/: __init__.py  _bridge.py  _interp.jl  juliapkg.json
tests/: test_parity_camb.py  test_parity_julia.py  test_smoke.py
